--- a/index/css/style.css
+++ b/index/css/style.css
@@ -9,7 +9,7 @@ html, body {
     height: 100%;
     width: 100%;
 }
-
+/* navbar */
 nav {
     padding: 10px 30px;
     display: flex;
@@ -33,7 +33,12 @@ nav ul li {
     list-style-type: none;
 }
 
-nav ul li a {
+nav ul li a{
+    text-decoration: none;
+    color: white;
+}
+
+nav ul li div.nav_link{
     text-decoration: none;
     color: white;
 }
